--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,6 +11,30 @@
     {{- with site.Params.footer.text }}
         {{ . | markdownify }}
     {{- end }}
+    
+    {{- if site.Params.footer.showSocialLinks }}
+    <div class="footer-social-links">
+        {{- range site.Params.socialIcons }}
+            <a href="{{ .url }}" target="_blank" rel="noopener noreferrer" title="{{ .name | humanize }}">
+                {{ partial "svg.html" . }}
+            </a>
+        {{- end }}
+    </div>
+    {{- end }}
+    
+    {{- if site.Params.footer.customLinks }}
+    <div class="footer-links">
+        {{- range site.Params.footer.customLinks }}
+            <a href="{{ .url }}">{{ .name }}</a>
+        {{- end }}
+    </div>
+    {{- end }}
+    
+    {{- with site.Params.footer.beian }}
+    <div class="footer-beian">
+        <a href="https://beian.miit.gov.cn/" target="_blank">{{ . }}</a>
+    </div>
+    {{- end }}
 </footer>
 {{- end }}
 
