--- a/layouts/index.html
+++ b/layouts/index.html
@@ -888,10 +888,10 @@
     margin-left: -50vw;
     margin-right: -50vw;
     position: relative;
-    background: url('https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=1400&q=80');
+    background: url('https://plus.unsplash.com/premium_photo-1663040543387-cb7c78c4f012?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-size: cover;
     background-position: center;
-    padding: 3.5rem 0 3.5rem 0;
+    padding: 15rem 0 15rem 0;
     box-shadow: 0 8px 32px 0 rgba(0,0,0,0.18);
     z-index: 10;
     display: flex;
@@ -935,7 +935,7 @@
       font-size: 1rem;
     }
     .fullwidth-banner {
-      padding: 2rem 0;
+      padding: 3.5rem 0;
     }
   }
 </style>
